src/pages/Forms/Form.css
.line-divider {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin-top: 20px;
}

.line-divider .line {
  flex-grow: 1;
  background: var(--ion-color-medium);
  height: 1px;
  margin: 0; 
}

.line-divider span {
  background: #ffffff;
  padding: 0 10px;
}

.insect-inspect-logo {
  margin: -20px 0 -30px 0;
}

.password-container {
  position: relative;
}

.input-icon {
  font-size: 1.2rem;
  z-index: 10;
  position: absolute;
  right: 10px;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  width: 30px; 
  height: 30px;
}

.input-icon:hover{
  background-color: rgba(0, 0, 0, 0.1);
}

.password-requirements {
  margin-top: 0.7rem;
}

.captcha-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1000;
  background-color: rgba(0, 0, 0, 0.5); /* semi-transparent black */
  display: flex;
  justify-content: center;
  align-items: center; /* center the CAPTCHA box */
}

@media screen and (max-width: 769px) {
  .insect-inspect-logo {
    margin: -35px 0 -50px 0;
  }
}

